--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "fugashi[unidic-lite]>=1.4.0",
     "youtube-transcript-api>=0.6.3",
     "yt-dlp>=2024.12.6",
 ]
