--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,6 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "fugashi[unidic-lite]>=1.4.0",
+    "matplotlib>=3.9.3",
     "yt-dlp>=2024.12.6",
 ]
